--- a/views/album/album.ejs
+++ b/views/album/album.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header.ejs") %>
-<div class="col py-4">
+<div class="col pt-4 mbuttom">
     <div class="album">
         <div class="container-fluid">
           <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
@@ -7,15 +7,15 @@
               <div class="col">
                 <div class="card shadows shadow-lg">
                   <div class="card-body">
-                    <a class="text-decoration-none" href="/album/<%= album._id %>">
-                      <img class="album--img" src="<%= album.image %>">
-                      <p class="album--name text-white">
-                        <%= album.name %>
-                      </p>
-                      <p class="album--artist d-inline">
-                        Album
-                      </p>
-                    </a>
+                      <a class="text-decoration-none" href="/album/<%= album._id %>">
+                        <img class="album--img" src="<%= album.image %>">
+                        <p class="album--name text-white d-block">
+                          <%= album.name %>
+                        </p>
+                        <span class="album--artist d-block">
+                          Album
+                        </span>
+                      </a>
                   </div>
                 </div>
               </div>
