--- a/views/artist/artist.ejs
+++ b/views/artist/artist.ejs
@@ -1,5 +1,5 @@
 <%- include("../partials/header.ejs") %>
-<div class="col py-4">
+<div class="col pt-4 mbuttom">
   <div class="album">
     <div class="container-fluid">
       <div class="row row-cols-3 row-cols-sm-3 row-cols-md-6 g-4">
