--- a/views/artist/search.ejs
+++ b/views/artist/search.ejs
@@ -1,7 +1,7 @@
 <%- include("../partials/header.ejs") %>
   <% let count=1 %>
-    <div class="col mb-5">
-      <div class="headbg mt-3">
+    <div class="col">
+      <div class="headbg mbuttom mt-3">
         <ul class="nav nav-pills justify-content-center pt-4">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="/search/<%= keyword %>">All Results</a>
@@ -53,7 +53,7 @@
           </div>
           <% } %>
             <% if(searchartist.length===0){ %>
-              <div class="squarebox text-center mt-3">
+              <div class="squarebox text-center mt-3 mbuttom">
                 <div class="t text-white">
                   <img class="py-2" src="/image/icons/scope.png" width="30px">
                   <h2>0 Artist for " <%= keyword %> "</h2>
