--- a/views/song/song-id.ejs
+++ b/views/song/song-id.ejs
@@ -14,8 +14,8 @@
           </div>
           <div class="songkit--down mt-3 d-flex">
             <a>
-              <img class="icon--img float-end mt-1" src="/image/icons/play-button.png" id="playicon">
-              <audio id="mySong">
+              <img class="icon--img float-end mt-1" src="/image/icons/play-button.png" id="card--playicon">
+              <audio id="card--audio">
                 <source src="<%= songinfo.source %>" type="audio/mp3">
               </audio>
             </a>
@@ -47,7 +47,7 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid row g-5 py-3">
+    <div class="container-fluid row g-5 py-3 mbuttom">
       <div class="col-md-8">
         <table class="table text-white">
           <tbody>
@@ -62,8 +62,8 @@
           </tbody>
         </table>
       </div>
-      <div class="col-md-4">
-        <div class="position-sticky" style="top: 2rem;">
+      <div class="col-md-4 mbottom">
+        <div class="" style="top: 2rem;">
           <div class="py-5 mb-3 rounded">
             <div class="d-flex justify-content-between">
               <h4 class="px-4 text-white">Other Song</h4>
