--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -159,13 +159,6 @@
     color: #ffffff;
 }
 
-.album--artist {
-    text-decoration: none;
-    font-size: 1.6vh;
-    font-weight: bold;
-    color: #B6B6B6;
-}
-
 .artist--img {
     width: 100%;
     object-fit: cover;
@@ -189,7 +182,8 @@
 
 .song--artist,
 .artist--artist,
-.album--album {
+.album--album,
+.album--artist  {
     text-decoration: none;
     font-size: 1.6vh;
     font-weight: bold;
@@ -527,11 +521,401 @@ div.squarebox .t {
     overflow-x: hidden;
     height: 600px;
 }
-
+.scrolladmin{
+  height: 600px;
+}
+.x{
+    background-color: transparent;
+    color: white;
+    border: none;
+}
 .profile-body{
     overflow-y: hidden;
 }
+ 
+/*Player bar*/
+.d-flex{display: flex;}
+.align-items-center{align-items: center;}
+.flex-wrap{flex-wrap:wrap;}
 
+/*Player bar*/
+.audio-player {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 2
+}
+.audio-player i{cursor: pointer;}
+.no-flexbox .audio-player {
+  display: none;
+}
+.flex-wrap {
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+}
+.player-controls.flex-item {
+  flex-basis: 150px;
+}
+
+.progress-container.flex-item {
+  flex-basis: 350px;
+  flex-grow: 2;
+  flex-shrink: 2;
+}
+
+.now-playing.flex-item {
+  flex-basis: 250px;
+}
+
+.toggles.flex-item {
+  flex-basis: 130px;
+}
+.track_img{background-image: url(http://www.electronicbeats.net/app/uploads/2013/08/Woodkid_Festival_Dresden_2013_Electronic_Beats.jpg);
+    width: 90px;
+    height: 90px;
+    transition: background-image .2s ease-in-out;
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+    margin-top: -15px;
+    margin-bottom: -15px;
+    margin-left: -25px;
+  margin-right: 15px;
+}
+.toggles.hide{
+    display: none;
+}
+
+.audio,
+.audio-stream,
+.video {
+  background: rgba(44,44,44);
+  padding: 15px;
+  position: relative;
+}
+
+/*Controls*/
+
+.playlist {
+  display: none;
+}
+
+.interface .player-controls button,
+.interface .toggles button,
+.interface .volume-controls button {
+  background: none;
+  border: none;
+  outline: none;
+  color: #7b7c8b;
+  line-height: 24px;
+  font-weight: 600;
+  -webkit-transition-delay: 0;
+  transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.2s;
+  -webkit-transition-timing-function: ease-in-out;
+  transition-property: all;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  -webkit-transition: all 0.2s linear;
+  -moz-transition: all 0.2s linear;
+  -ms-transition: all 0.2s linear;
+  -o-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  font-size: 20px;
+  padding: 0 5px;
+}
+
+.interface .player-controls .play i,
+.interface .player-controls .previous i,
+.interface .player-controls .next i {
+  font-size: 23px;
+  color: #fff;
+}
+
+.interface .player-controls .play:hover i,
+.interface .player-controls .previous:hover i,
+.interface .player-controls .next:hover i {
+  font-size: 23px;
+  color:#00FFFF;
+}
+
+.interface .player-controls .play i {
+  padding-left: 5px;
+}
+
+.audio.state-playing .play i {
+  padding-left: 0px;
+}
+
+.audio.state-playing .play i:before {
+  content: "\f04c" !important;
+}
+
+.progress-container,
+.volume-bar-container {
+  padding: 10px;
+}
+.progress{overflow: visible;}
+.progress,
+.seek-bar,
+.play-bar,
+.volume-bar,
+.volume-bar-value {
+  height: 8px;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  border-radius: 1px;
+}
+
+.progress {
+  margin: 0 50px;
+  background-color: #2b2b2b;
+  border-radius: 5px;
+}
+
+.seek-bar,
+.volume-bar {
+  cursor: pointer;
+  background-color: #333641;
+  border-radius: 5px;
+}
+
+.play-bar {
+  float: left;
+  position: relative;
+  background-color: #00c85f;
+  border-radius: 5px;
+  overflow: visible !important;
+}
+
+.volume-bar-value {
+  float: left;
+  position: relative;
+  background-color: #aaaaaa;
+}
+
+.progress .bullet,
+.volume-bar .bullet {
+  position: absolute;
+  content: "";
+  top: -5px;
+  right: -7px;
+  height: 18px;
+  width: 18px;
+  background: #ffffff;
+  border-radius: 50%;
+}
+
+.time-holder {
+  position: relative;
+  top: 0;
+  color: #979797;
+  font-size: 16px;
+}
+
+.time-holder .current-time {
+  position: absolute;
+  left: 0;
+  top: -3px;
+}
+
+.time-holder .duration {
+  position: absolute;
+  right: 0;
+  top: -3px;
+}
+
+
+.now-playing {
+  padding: 0 10px;
+}
+
+.track-name {
+  color: #fff;
+  font-size: 16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 145px;
+}
+
+.artist-name {
+  color: #6d6d6d;
+  font-size: 14px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 140px;
+}
+
+/* Toggles */
+
+.toggles button {
+  margin: 0 3px;
+}
+
+.toggles button:hover {
+  color: #fff;
+}
+
+.state-looped .toggles .repeat,
+.state-shuffled .toggles .shuffle,
+.interface .toggles .playlist-is-visible.show-playlist {
+  color: #00c85f;
+}
+
+/* Volume Controls */
+
+.volume-controls button {
+  float: left;
+}
+
+.volume-controls .volume-bar {
+  margin-left: 40px;
+  margin-top: 8px;
+}
+
+.state-muted .mute i:before {
+  content: "\f026" !important;
+}
+
+.volume-bar,
+.volume-bar-value {
+  border-radius: 5px;
+}
+
+.state-no-volume .volume-controls {
+  display: none;
+}
+
+/* Playlist  */
+
+.playlist {
+  position: absolute;
+  right: 65px;
+  bottom: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 20px 25px;
+  width: 400px;
+}
+
+.playlist ul {
+  padding: 0;
+  margin: 0;
+  max-height: 200px;
+  overflow: auto;
+}
+
+.playlist li {
+  list-style: none;
+}
+
+.playlist li a {
+  color: #c9c9c9;
+  display: block;
+  padding: 10px 0;
+  outline: none;
+  border-bottom: 1px solid #1f1f1f;
+}
+
+.playlist li:last-child a {
+  border-bottom: 0;
+}
+
+.playlist li a:hover,
+.playlist li a:focus,
+.playlist li a:active {
+  color: #00c85f;
+  text-decoration: none;
+}
+
+.playlist li a span {
+  color: #6d6d6d;
+}
+
+/* ==================== Media Query ==================== */
+
+@media (max-width: 992px) {
+  .now-playing {
+   /* display: none !important;*/
+    flex-basis: 180px !important;
+   }
+  .now-playing .track_img{display: none;}
+}
+
+@media (max-width: 767px) {
+  .volume-bar,
+  .volume-bar .bullet,
+  .time-holder {
+    display: none !important;
+  }
+  .now-playing{order: 2}
+  .progress-container.flex-item {
+    flex-basis: 100%;
+    padding: 12px 15px;
+    order: 1
+  }
+  .progress .bullet {
+    right: -10px;
+  }
+  .volume-controls.flex-item {
+    flex-basis: 55px;
+    order: 4;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .progress {
+    margin: 0;
+  }
+  .interface .player-controls .play {
+    margin: 0 3px;
+  }
+  .interface .player-controls .play i,
+  .interface .player-controls .previous i,
+  .interface .player-controls .next i {
+    font-size: 16px;
+  }
+  .interface .player-controls .play,
+  .interface .player-controls .pause {
+    width: 42px;
+    height: 42px;
+  }
+  .interface .player-controls .play i,
+  .interface .player-controls .pause i  {
+    padding-left: 3px;
+    padding-top: 0;
+  }
+  .state-playing .interface .player-controls .play i,
+  .state-playing .interface .player-controls .pause i {
+    padding-left: 0;
+  }
+  .player-controls.flex-item {
+    flex-basis: 100px;
+    order: 3;
+  }
+}
+
+@media (max-width: 480px) {
+  .toggles,
+  .playlist {
+    display: none !important;
+  }
+}
+/*Player bar end*/
+
+.mbuttom{
+    margin-bottom: 100px;
+}
+
+.volume-container,.progress-container{
+  accent-color: #00FFFF;
+}
+.track_img{
+  background-image: url(https://cdn.i-joox.com/static/di/default/default-playlist@300.png);
+}
 @keyframes glow {
     from {
         text-shadow: 0 0 10px rgb(42, 226, 233), 0 0 20px rgb(42, 226, 233), 0 0 30px rgb(42, 226, 233), 0 0 40px rgb(42, 226, 233), 0 0 50px rgb(42, 226, 233);
